export class Person {
    email: string = "";
    password: string = "";
}

export class CurrentPerson {
    referencePerson: String = "";
    firstName: String = "";
    lastName: String = "";
    email: String = "";
    phone: String = "";
    address: String = "";
    city: String = "";
}